--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 50%;
     left: 30%;
-    transform: translate(-20%, -75%);
+    transform: translate(-20%, -70%);
 }
 
 .title-app-section-flex {
@@ -11,8 +11,18 @@
 
 .search-artist-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin-top: 3rem;
+}
+
+.no-search-artist {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
 }
 
 .title-app {
@@ -24,8 +34,6 @@
     letter-spacing: 0.1rem;
     font-weight: bold;
     font-family: "Moirai One", cursive;
-    /* font-family: "Russo One", sans-serif; */
-    /* text-shadow: 1px 1px 2px #322e4a, 0 0 1em #322e4a, 0 0 0.3em #322e4a; */
 }
 
 .title-app > span {
@@ -56,20 +64,34 @@
     border-top-right-radius: 0.8rem;
     border-bottom-right-radius: 0.8rem;
     background-color: transparent;
+    cursor: pointer;
 }
 .search-button > img {
     height: 1.5rem;
 }
 
+.short-info {
+    margin-top: 0.6rem;
+    font-size: 0.7rem;
+    color: #322e4a;
+}
+
 .artist-info-section {
     margin: 0 auto;
     margin-top: 3rem;
+    margin-bottom: 5rem;
     width: 50%;
     background-color: #221f32;
     border-radius: 1rem;
     padding: 1.5rem 0;
     color: rgb(190, 187, 187);
     box-shadow: 0px 0px 15px rgb(163, 162, 162);
+}
+
+.artist-error {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
 }
 
 .artist-container {
@@ -85,12 +107,24 @@
 .artist-image {
     height: 8rem;
     border-radius: 50%;
-    box-shadow: 6px 0px 12px #544c33;
+    box-shadow: 6px 0px 12px #464646;
     border: 1px solid #444061;
 }
 
+.artist-name-container {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: rgba(208, 206, 206, 0.87);
+}
+
+.artist-name-container > img {
+    margin-right: 0.6rem;
+    margin-top: 1.4rem;
+    height: 1.1rem;
+}
+
 .artist-name {
-    margin-top: 2rem;
     margin-bottom: 0.2rem;
 }
 
@@ -130,7 +164,7 @@ p > span {
 
 .genres-list {
     margin: 0;
-    margin-top: 0.1rem;
+    margin-top: 0.3rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -145,6 +179,11 @@ p > span {
     padding: 0.2rem 0.7rem;
     border-radius: 0.3rem;
     margin-top: 0.4rem;
+}
+
+.albums-subtitle {
+    margin-bottom: 0;
+    color: rgba(208, 206, 206, 0.87);
 }
 
 .albums-list {
@@ -182,11 +221,24 @@ p > span {
     font-size: 0.8rem;
     margin: 0;
     margin-top: 0.2rem;
-    color: rgba(255, 255, 255, 0.87);
+    color: rgba(208, 206, 206, 0.87);
 }
 
 .album-songs {
     margin-top: 0.2rem;
-    color: rgba(255, 255, 255, 0.87);
+    color: rgba(208, 206, 206, 0.87);
     font-size: 0.6rem;
+}
+
+footer {
+    position: relative;
+}
+
+footer > div {
+    position: absolute;
+    bottom: 0.3rem;
+    font-size: 0.8rem;
+    left: 50%;
+    transform: translate(-50%);
+    color: #322e4a;
 }
