--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,7 @@
     color: rgba(255, 255, 255, 0.87);
     /* background-color: #9c98bd; */
     background-color: #c8c4da;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
