--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,9 @@
     margin-bottom: 0.2rem;
 }
 
-.popularity-info {
+.popularity-info,
+.top-tracks-subtitle,
+.albums-subtitle {
     padding-bottom: 0.3rem;
     border-bottom: 1px solid gray;
 }
@@ -181,7 +183,72 @@ p > span {
     margin-top: 0.4rem;
 }
 
-.albums-subtitle {
+.top-tracks-list {
+    list-style: none;
+    padding: 0;
+}
+
+.track-item {
+    display: flex;
+    align-items: center;
+}
+
+.track-name-container {
+    display: flex;
+    align-items: center;
+    margin-right: 0.5rem;
+}
+
+.dot-img {
+    height: 0.5rem;
+    margin-right: 0.4rem;
+}
+
+.track-name {
+    font-size: 0.8rem;
+    font-weight: normal;
+    margin: 0.4rem 0;
+}
+
+/* ------- audio */
+.track-item > audio {
+    height: 1.2rem;
+    width: 50%;
+}
+
+audio {
+    height: 1.4rem;
+}
+
+.audio-tag {
+    font-size: 0.2rem !important;
+}
+
+audio::-webkit-media-controls-panel {
+    background-color: rgb(171, 171, 171);
+}
+
+.img-audio {
+    position: absolute;
+    height: 0.7rem;
+    top: 0.12rem;
+    left: 0.2rem;
+}
+
+.button-audio {
+    position: relative;
+    border-radius: 50%;
+    height: 1rem;
+    width: 1rem;
+    background-color: rgba(208, 206, 206, 0.87);
+    border: none;
+    margin-right: 0.5rem;
+}
+
+/* ----end audio */
+
+.albums-subtitle,
+.top-tracks-subtitle {
     margin-bottom: 0;
     color: rgba(208, 206, 206, 0.87);
 }
