--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,28 @@
 :root {
-    /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
     font-family: "Pathway Extreme", sans-serif;
 
     color: rgba(255, 255, 255, 0.87);
-    /* background-color: #9c98bd; */
-    background-color: #c8c4da;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+body {
+    margin: 0;
+    background: linear-gradient(-45deg, #c6c1da, #d2a3a7, #ffeef7, #dc9575);
+    background-size: 400% 400%;
+    animation: gradient 15s linear infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
